refactor: sonarQube 취약점 일부 수정