@@ -99,7 +99,7 @@ public class AdminService {
 
          String email = SecurityContextHolder.getContext().getAuthentication().getName();
          User admin = userRepository.findByEmail(email)
-                 .orElseThrow(() -> new ResourceNotFoundException("존재하지 않는 사용자입니다."));
+                 .orElseThrow(() -> new ResourceNotFoundException(AppConstants.ErrorMessage.USER_NOT_FOUND));
 
 
         // CANCEL_REQUEST 상태인 DONATION 내역만 조회
@@ -115,7 +115,7 @@ public class AdminService {
 
         return cancelRequests.stream()
                 .map(CancelRequestResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -126,7 +126,7 @@ public class AdminService {
 
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
         User admin = userRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("존재하지 않는 사용자입니다."));
+                .orElseThrow(() -> new ResourceNotFoundException(AppConstants.ErrorMessage.USER_NOT_FOUND));
 
 
         // transactionId로 DONATION과 RECEIVED 내역 조회
@@ -208,7 +208,7 @@ public class AdminService {
 
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
         User admin = userRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("존재하지 않는 사용자입니다."));
+                .orElseThrow(() -> new ResourceNotFoundException(AppConstants.ErrorMessage.USER_NOT_FOUND));
 
         // 파일 개수 검증
         validateFileCounts(files);
@@ -263,7 +263,7 @@ public class AdminService {
     ) {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
         User admin = userRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("존재하지 않는 사용자입니다."));
+                .orElseThrow(() -> new ResourceNotFoundException(AppConstants.ErrorMessage.USER_NOT_FOUND));
 
         Announcement announcement = announcementRepository.findById(announceId)
                 .orElseThrow(() -> new ResourceNotFoundException("공지사항을 찾을 수 없습니다."));
@@ -282,15 +282,14 @@ public class AdminService {
         if (updateRequest != null && updateRequest.getPriority() != null) {
             Integer newPriority = updateRequest.getPriority();
 
-            if (newPriority == 0) {
-                // 0 -> 0이면 bump 필요X
-                if (announcement.getPriority() == null || announcement.getPriority() != 0) {
-                    announcementRepository.bumpOnlyZeroToOneExceptSelf(
-                            announcement.getAnnounceType(),
-                            announcement.getAnnounceId()
-                    );
-                }
+            // 0으로 설정하려고 할 때만 bump 로직 실행
+            if (newPriority == 0 && (announcement.getPriority() == null || announcement.getPriority() != 0)) {
+                announcementRepository.bumpOnlyZeroToOneExceptSelf(
+                        announcement.getAnnounceType(),
+                        announcement.getAnnounceId()
+                );
             }
+
             announcement.setPriority(newPriority);
         }
 
@@ -331,7 +330,7 @@ public class AdminService {
     public void deleteAnnouncement(Integer announceId) {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
         User admin = userRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("존재하지 않는 사용자입니다."));
+                .orElseThrow(() -> new ResourceNotFoundException(AppConstants.ErrorMessage.USER_NOT_FOUND));
 
         Announcement announcement = announcementRepository.findById(announceId)
                 .orElseThrow(() -> new ResourceNotFoundException("공지사항을 찾을 수 없습니다."));
